# codebook

./: .gitignore  .tool-versions  ExerciseOne.ipynb  README.md
studies/bachelor-thesis/: README.md  pyproject.toml
studies/bachelor-thesis/data-analysis/: DataAnalysis.ipynb
studies/bachelor-thesis/data-analysis/.ipynb_checkpoints/: DataAnalysis-checkpoint.ipynb
studies/bachelor-thesis/data-preparations/: data-filtering.ipynb
studies/bachelor-thesis/data-preparations/.ipynb_checkpoints/: data-filtering-checkpoint.ipynb
studies/bachelor-thesis/models/: Simplified_DensNet_v1.md  Simplified_DensNet_v2.md  Simplified_DensNet_v3.md  Simplified_DenseNet_v1.md  Simplified_DenseNet_v2.md  Simplified_DenseNet_v3.md  Simplified_DenseNet_v4.md  Simplified_DenseNet_v5.md  Summary.md
studies/bachelor-thesis/models/DenseNet121_v1/: classification_report.txt  loss_analysis_metrics.csv  model_metrics.csv  val_metrics.csv
studies/bachelor-thesis/models/DenseNet121_v2/: classification_report.txt  loss_analysis_metrics.csv  model_metrics.csv  val_metrics.csv
studies/bachelor-thesis/models/DenseNet121_v2_1/: classification_report.txt  loss_analysis_metrics.csv  model_metrics.csv  val_metrics.csv
studies/bachelor-thesis/models/DenseNet121_v3/: classification_report.txt  loss_analysis_metrics.csv  model_metrics.csv  val_metrics.csv
studies/bachelor-thesis/models/DenseNet121_v3_1/: classification_report.txt  loss_analysis_metrics.csv  model_metrics.csv  val_metrics.csv
studies/bachelor-thesis/models/DenseNet121_v3_2/: classification_report.txt  loss_analysis_metrics.csv  model_metrics.csv  val_metrics.csv
studies/bachelor-thesis/notebooks/: DataAnalysis.ipynb  DataFiltering.ipynb  DataSetsVisualisation.ipynb  DataSplit.ipynb  DataStorage.ipynb  DensNet121.ipynb  DenseNet121.ipynb  ModelAnalysis.ipynb  ModelEvaluation.ipynb  ModelMetricsAnalysis.ipynb  ModelSummary.ipynb  ModelTraining.ipynb  SimplifiedDenseNet.ipynb
studies/bachelor-thesis/scripts/: run_data_script.py
studies/bachelor-thesis/src/: bounding_box_utils.py  consts.py  data_entry_utils.py  tensorflow_utils.py
studies/bachelor-thesis/tests/: __init__.py  test_bounding_box_utils_test.py  test_calculations.py  test_data_entry_utils.py  test_image_utils.py  test_labels_utils.py  test_tensorflow_data_splitter.py  test_tensorflow_utils.py
studies/numerical-methods/semester-five/: README.md  pyproject.toml
(+389 files in other folders)
