[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chest_x_ray_diseases_detection"
version = "0.0.1"
authors = [
    { name="Piotr Rybarczyk", email="argonuspiotr@gmail.com" },
]
description = """
ML project for bachelor thesis of Piotr Rybarczyk at Warsaw School of Computer Science
It's a Machine Learning classification model for Chest X-Ray images dieseases detection
"""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2.3",
    "matplotlib>=3.5.2",
    "seaborn>=0.11.0",
    "scikit-learn>=1.6.1",
    "scikit-multilearn>=0.0.2",
    "tensorflow>=2.11.0",
    "pytest>=7.0.0",
    "tqdm>=4.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
    "scikit-image>=0.22.0",
    "opencv-python>=4.11.0.79",
    "ipywidgets>=8.0.0",
    "nvidia-cuda-runtime-cu12"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
