[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numerical-methods"
readme = "README.md"
version = "0.0.1"
authors = [{name="argonus", email="argonuspiotr@gmail.com"}]
keywords = ["arithmetic", "numerical-methods"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["sympy"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]